--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,15 +45,11 @@ test = [
     "decorator",
     "mock",
     "hypothesis",
-    "pytest-runner",
     "pytest-timeout",
-    "fmu-steaclient @ git+https://github.com/equinor/fmu-steaclient",
 ]
 
 style = [
   "pre-commit",
-  "pre-commit-hooks",
-  "ruff",
 ]
 
 docs = [
@@ -116,10 +112,28 @@ select = [
     "I",  # isort
     "C",  # flake8-comprehensions
     "B",  # flake8-bugbear
+    "SIM",  # flake-8-simplify
+    "PL",  # pylint
 ]
 ignore = [
     "E501",  # line too long, handled by black
     "B008",  # do not perform function calls in argument defaults
     "C901",  # too complex
     "W191",  # not to be used in combination with a formatter
+    "PLW2901",  # redefined-loop-name
+    "PLR2004",  # magic-value-comparison
+    "PLR0915",  # too-many-statements
+    "PLR0912",  # too-many-branches
+    "PLR0911",  # too-many-return-statements
+    "PLC2701",  # import-private-name
+    "PLR6201",  # literal-membership
+    "PLR0914",  # too-many-locals
+    "PLR6301",  # no-self-use
+    "PLW1641",  # eq-without-hash
+    "PLR0904",  # too-many-public-methods
+    "PLR1702",  # too-many-nested-blocks
+    "PLW3201",  # bad-dunder-method-name
 ]
+
+[tool.ruff.lint.pylint]
+max-args = 10
